# synth_jxrs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: amp.rs  app.rs  app.slint  filter.rs  lib.rs  main.rs  message.rs  midi.rs  mixer.rs  synth.rs  ui.rs
src/osc/: mod.rs  oscillator.rs  wave.rs
src/synth/: amp.rs  mixer.rs  mod.rs
src/synth/osc/: mod.rs  oscillator.rs
src/ui/: amplifier.slint  app.slint  knob.slint  oscillator.slint  utilities.slint
