[package]
name = "synth_jxrs"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
midi-control = "0.2.2"
midir = "0.10.0"
rand = "0.8.5"
rustfft = "6.2.0"
slint = "1.7.1"
tokio = { version = "1.39.2", features = ["sync", "rt", "macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"

[build-dependencies]
slint-build = "1.7.1"
